# DISSERTATION_CLONE

./: .gitattributes  .gitignore  ALL_UPDATES_COMPLETE_SUMMARY.md  APRIL_23_DEFENSE_PREP_CHECKLIST.md  AUDIT_QUICK_REFERENCE.txt  AUDIT_SUMMARY.md  CODE_TO_PAPER_VERIFICATION_SUMMARY.md  COMMITTEE_REVIEW_STATUS.md  COMPREHENSIVE_HETEROGENEITY_FINDINGS.md  CRITERION1_FIX_SUMMARY.md  Complete_Data_Sources_Inventory.docx  Conceptual_Models_Explanation_Guide.py  Conceptual_Models_Explanation_Updated.py  DASHBOARD_COMPLETION_SUMMARY.md  DASHBOARD_DATA_VERIFICATION.md  DASHBOARD_INTEGRATION_SUMMARY.md  DATA_SETUP_GUIDE.md  DISSERTATION_COMMITTEE_REVIEW.md  DISSERTATION_COMPLETENESS_AUDIT.md  DISSERTATION_KEY_SECTIONS.md  DISSERTATION_PROPOSAL_AUDIO_BRIEF_COMPREHENSIVE_UPDATED.txt  Dissertation_Presentation.pptx  Dissertation_Presentation_Final.pptx  Dissertation_Presentation_Updated.pptx  Dissertation_Presentation_Zoom.pptx  Dissertation_Proposal.docx  Dissertation_Proposal_Complete.docx  Dissertation_Proposal_Comprehensive.docx  Dissertation_Proposal_Enhanced.docx  Dissertation_Proposal_Narrative.docx  Dissertation_Proposal_UPDATED_Complete.docx  Dissertation_Research_Update_Email.docx  Dissertation_Speaker_Notes.txt  ESSAY1_VERIFICATION_REPORT.md  ESSAY2_VERIFICATION_REPORT.md  EXAMPLE_RUN_ALL_OUTPUT.txt  FEEDBACK_REVIEW.md  H5_H6_AUTHORITATIVE_RESULTS.txt  HIGH_AND_MEDIUM_PRIORITY_COMPLETION.md  IMPLEMENTATION_GUIDE_GAPS_3_AND_4.md  (+82 more)
.claude/: settings.local.json
Dashboard/: BUILD_SUMMARY.md  DASHBOARD_STRUCTURE.md  DASHBOARD_UPDATE_SUMMARY.md  app.py  utils.py
Data/: DataBreaches.xlsx
Notebooks/: 01_descriptive_statistics.py  02_essay2_event_study.py  (+2 more)
(+397 files in other folders)
