[project]
name = "dissertation-analysis"
version = "1.0.0"
description = "Data Breach Disclosure Timing Analysis"
authors = [{name = "Timothy Spivey", email = "tspivey@southalabama.edu"}]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
keywords = ["data-breach", "event-study", "financial-analysis", "dissertation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "statsmodels>=0.14",
    "openpyxl>=3.1",
    "plotly>=5.18",
    "streamlit>=1.29",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.urls]
Repository = "https://github.com/your-repo/dissertation-analysis"
Documentation = "https://github.com/your-repo/dissertation-analysis/blob/main/README.md"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # Line length handled by black
